--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frego x402 - AI Shipping Agent</title>
+    <meta name="description" content="AI-powered shipping labels with crypto payments. Get instant shipping quotes from USPS, UPS, FedEx with natural language descriptions and x402 USDC payments.">
+    <meta property="og:title" content="Frego x402 AI Shipping Agent">
+    <meta property="og:description" content="AI-powered shipping labels with crypto payments. Get instant shipping quotes from USPS, UPS, FedEx with natural language descriptions and x402 USDC payments.">
+    <meta property="og:image" content="https://ship.frego.ai/og-image.png">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Frego x402 AI Shipping Agent">
+    <meta name="twitter:description" content="AI-powered shipping labels with crypto payments">
+    <meta name="twitter:image" content="https://ship.frego.ai/og-image.png">
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <link rel="icon" type="image/png" href="/favicon.png">
     <link rel="stylesheet" href="/styles.css">
